2007-03-20  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpParameterDataProvider.cs (GetCurrentParameterIndex):
	Rewritten to use my CSharpIndentEngine parse tree to hopefully
	solve bug #80883 once and for all.

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Instead of using
	engine.IsInsideMultiLineComment when deciding whether or not to
	reindent the line, use engine.LineBeganInsideMultiLineComment
	since that's what we really wanted to know.

	* FormattingStrategy/CSharpIndentEngine.cs: Added more convenience
	state properties (such as StackDepth and
	LineBeaganInside[VerbatimString,MultiLineComment].

2007-03-19  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): If the before/after
	indent text is identical, then don't replace the text - instead
	calculate what the cursor position would be and set it. (found a
	way to avoid the text selection that occurs when you set
	CursorPosition).

	* FormattingStrategy/CSharpIndentEngine.cs (Push): Fix bug #81189
	by resetting popVerbarim when we pop the verbatim string literal
	off the stack

2007-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/OverrideCompletionData.cs (InsertMethod, InsertProperty):
	(InsertEvent, InsertIndexer): Use spaces rather than tabs for
	indenting when appropriate. Fixes bug #81168.

	* Gui/CSharpTextEditorExtension.cs (GetDirectiveCompletionData):
	Add #pragma to the directives. Fixes bug #81131.

2007-03-14  Jeffrey Stedfast  <fejj@novell.com>

	* Gui/CSharpTextEditorExtension.cs (KeyPress): Fixed a bug where
	if you typed the full completion text and then used <Enter> to
	complete the fully-typed completion text, the Smart Indent code
	would indent the next line even though it shouldn't have done so.

2007-03-14  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use 'fname' as the
	filename to embed. It is updated appropriately by GetResourceId().

2007-03-13  Miguel de Icaza  <miguel@novell.com>
